Fix bug dues to Var::getUse return empty set && Improve TypeInference0